Add  cyrillic "В" symbol conversion

--- a/src/main/resources/general/directories.properties
+++ b/src/main/resources/general/directories.properties
@@ -1,2 +1,4 @@
 latinAlphabet=alphabet\\latin_cyrillic.properties
 cyrillicAlphabet=alphabet\\cyryllic_latin.properties
+specificTatarLetters=alphabet\\specific_tatar_letters.properties
+vowels=alphabet\\vowels.properties
