First step to support other languages with cyrillic alphabets

--- a/src/main/resources/general/directories.properties
+++ b/src/main/resources/general/directories.properties
@@ -1,4 +1,4 @@
-latinAlphabet=alphabet\\latin_cyrillic.properties
-cyrillicAlphabet=alphabet\\cyryllic_latin.properties
-specificTatarLetters=alphabet\\specific_tatar_letters.properties
-conditions=alphabet\\conditions.properties
+tatarLatinAlphabet=alphabet\\tatar\\latin_cyrillic.properties
+tatarCyrillicAlphabet=alphabet\\tatar\\cyryllic_latin.properties
+tatarSpecificLetters=alphabet\\tatar\\specific_letters.properties
+tatarRulesHelper=alphabet\\tatar\\rules_helper.properties
